force-app/main/default/objects/QCC_Other_Waiver__c/QCC_Other_Waiver__c.object-meta.xml
<CustomObject>
    <description>Container for waivers entered into Aqire to be recorded against the customer</description>
    <label>Other Waiver</label>
    <nameField>
        <displayFormat>W{00000000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other Waivers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>