force-app/main/default/objects/QCC_Other_Waiver__c/fields/QCC_Amount__c.field-meta.xml
<CustomField>
    <fullName>QCC_Amount__c</fullName>
    <description>Amount which has been wavered for the customer</description>
    <inlineHelpText>Please add either currency or points in a whole amount, to display in the Value field</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>