force-app/main/default/objects/QCC_Other_Waiver__c/fields/QCC_Approver_Manager__c.field-meta.xml
<CustomField>
    <fullName>QCC_Approver_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Automatically populated with the manager of the record owner&apos;s manager</description>
    <label>Approver Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Other_Waivers</relationshipName>
    <type>Lookup</type>
</CustomField>