force-app/main/default/objects/QCC_Other_Waiver__c/fields/QCC_Comments__c.field-meta.xml
<CustomField>
    <fullName>QCC_Comments__c</fullName>
    <description>Any other comments regarding the waiver</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Any other comments regarding the waiver</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>