force-app/main/default/objects/QCC_Other_Waiver__c/fields/QCC_Contact__c.field-meta.xml
<CustomField>
    <fullName>QCC_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The related contact for which the waiver is being granted</description>
    <inlineHelpText>The related contact for which the waiver is being granted</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Other Waivers</relationshipLabel>
    <relationshipName>Waivers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>