force-app/main/default/objects/QCC_Other_Waiver__c/fields/QCC_Date__c.field-meta.xml
<CustomField>
    <fullName>QCC_Date__c</fullName>
    <description>Date the waiver is made.</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date</label>
    <type>Date</type>
</CustomField>