force-app/main/default/objects/QCC_Other_Waiver__c/fields/QCC_Flight_No__c.field-meta.xml
<CustomField>
    <fullName>QCC_Flight_No__c</fullName>
    <description>Flight number for which the waiver is related to</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Flight number for which the waiver is related to</inlineHelpText>
    <label>Flight No</label>
    <length>6</length>
    <type>Text</type>
</CustomField>