force-app/main/default/objects/QCC_Other_Waiver__c/fields/QCC_Reason__c.field-meta.xml
<CustomField>
    <fullName>QCC_Reason__c</fullName>
    <description>The reason for making the waiver</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The reason for making the waiver</inlineHelpText>
    <label>Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>