force-app/main/default/objects/QCC_Other_Waiver__c/fields/QCC_Status__c.field-meta.xml
<CustomField>
    <fullName>QCC_Status__c</fullName>
    <description>Status of the waiver which can either be manually set based on business rules or will be automatically set by the approval process</description>
    <inlineHelpText>Status of the waiver</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Awaiting Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>