force-app/main/default/objects/QCC_Other_Waiver__c/fields/QCC_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>QCC_Sub_Category__c</fullName>
    <description>The sub-category applicable based on the category</description>
    <inlineHelpText>The sub-category applicable based on the category</inlineHelpText>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>QCC_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SC - 50% for 90 days</fullName>
            </value>
            <value>
                <fullName>SC - Disruption to other carrier</fullName>
            </value>
            <value>
                <fullName>SC - GOGW</fullName>
            </value>
            <value>
                <fullName>Points - GOGW</fullName>
            </value>
            <value>
                <fullName>Points - Recovery</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Award Assistance Fee</fullName>
            </value>
            <value>
                <fullName>Booking Fee</fullName>
            </value>
            <value>
                <fullName>Change Fee</fullName>
            </value>
            <value>
                <fullName>Cancellation Fee</fullName>
            </value>
            <value>
                <fullName>Family Transfer Service Fee</fullName>
            </value>
            <value>
                <fullName>Fare Rule</fullName>
            </value>
            <value>
                <fullName>Loyalty Approved</fullName>
            </value>
            <value>
                <fullName>Reroute After Travel Commenced</fullName>
            </value>
            <value>
                <fullName>Service Fee</fullName>
            </value>
            <value>
                <fullName>FITY</fullName>
                <isActive>false</isActive>
                <label>FITY</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>