force-app/main/default/objects/QCC_Other_Waiver__c/fields/QCC_Value__c.field-meta.xml
<CustomField>
    <fullName>QCC_Value__c</fullName>
    <description>Formula used to display the combination of the Value Type and Amount</description>
    <formula>IF(TEXT(QCC_Value_Type__c) == &quot;Qantas Points&quot;, &quot;PTS &quot; + TEXT(QCC_Amount__c), IF(TEXT(QCC_Value_Type__c) == &quot;Currency&quot;, TEXT(CurrencyIsoCode) + &quot; &quot; + TEXT(QCC_Amount__c), &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value</label>
    <type>Text</type>
</CustomField>