force-app/main/default/objects/QCC_Other_Waiver__c/fields/QCC_Value_Type__c.field-meta.xml
<CustomField>
    <fullName>QCC_Value_Type__c</fullName>
    <description>The type of the amount entered</description>
    <inlineHelpText>The type of the amount entered</inlineHelpText>
    <label>Value Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Qantas Points</fullName>
            </value>
            <value>
                <fullName>Points</fullName>
                <isActive>false</isActive>
                <label>Points</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>