force-app/main/default/objects/QCC_Other_Waiver__c/recordTypes/Other_Waiver.recordType-meta.xml
<RecordType>
    <fullName>Other_Waiver</fullName>
    <active>true</active>
    <description>Custom Record Type for Managing Other Waivers</description>
    <label>Other Waiver</label>
</RecordType>