force-app/main/default/objects/QCC_Other_Waiver__c/validationRules/QCC_Waiver_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>QCC_Waiver_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				OR( 
								AND(TEXT(QCC_Value_Type__c) == &quot;Currency&quot;, QCC_Amount__c &gt; 500),
								AND(TEXT(QCC_Value_Type__c) == &quot;Qantas Points&quot;, QCC_Amount__c &gt; 20000),
								TEXT(QCC_Category__c) == &quot;PO Retain&quot;,
								TEXT(QCC_Category__c) == &quot;Bonus&quot;
				),
				NOT(ISPICKVAL(PRIORVALUE(QCC_Status__c), &quot;Awaiting Approval&quot;)), 
				TEXT(QCC_Status__c) == &quot;Approved&quot;
)</errorConditionFormula>
    <errorMessage>Waivers over $500 or 20,000 PTS or those with &quot;Bonus&quot; / &quot;PO Retail&quot; Category must be submitted for approval.</errorMessage>
</ValidationRule>