force-app/main/default/objects/QCC_Other_Waiver__c/validationRules/Records_cannot_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Records_cannot_be_changed</fullName>
    <active>true</active>
    <errorConditionFormula>IF (AND($User.Id =  OwnerId,
								ISPICKVAL(QCC_Status__c, &quot;Awaiting Approval&quot;),
								OR(ISCHANGED(QCC_Contact__c),
											ISCHANGED(QCC_Category__c),
											ISCHANGED(QCC_Sub_Category__c),
											ISCHANGED(QCC_Flight_No__c),
											ISCHANGED(QCC_Comments__c),
											ISCHANGED(QCC_Reason__c),
											ISCHANGED(QCC_Value_Type__c),
											ISCHANGED(QCC_Amount__c)
										) 
							),
				true, false
			)</errorConditionFormula>
    <errorMessage>Cannot edit the record while the status is Awaiting Approval.</errorMessage>
</ValidationRule>