force-app/main/default/objects/QCC_Other_Waiver__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Waivers</label>
</ListView>