force-app/main/default/objects/QCC_Other_Waiver__c/listViews/QANTAS_VIP_TL_Approval_Queue_QCC_Other_Waiver.listView-meta.xml
<ListView>
    <fullName>QANTAS_VIP_TL_Approval_Queue_QCC_Other_Waiver</fullName>
    <filterScope>Queue</filterScope>
    <label>QANTAS VIP TL Approval Queue</label>
    <queue>QANTAS_VIP_TL_Approval_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>